--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   
   
-  <title>AUDIOWAVE</title>
+  <title>AUDIO WAVE</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -45,7 +45,7 @@
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="#top">
-                        微感-AUDIOWAVE</a></span>
+                        AUDIO WAVE</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -189,7 +189,7 @@
                 </h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5">
-                        時間：106/6/1~6/2<br>地點：明志藝廊</p>
+                        展覽名稱：微感<br>展出時間：106/6/1~6/2<br>展場地點：明志藝廊</p>
                 </div>
                 
             </div>
